Autogenerated/Bindings/C/lib3mf.h


LIB3MF_DECLSPEC Lib3MFResult lib3mf_multipropertygroup_addlayer(Lib3MF_MultiPropertyGroup pMultiPropertyGroup, const sLib3MFMultiPropertyLayer * pTheLayer, Lib3MF_uint32 * pLayerIndex);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_multipropertygroup_getlayer(Lib3MF_MultiPropertyGroup pMultiPropertyGroup, Lib3MF_uint32 nLayerIndex, sLib3MFMultiPropertyLayer * pTheLayer);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_multipropertygroup_removelayer(Lib3MF_MultiPropertyGroup pMultiPropertyGroup, Lib3MF_uint32 nLayerIndex);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_getsizex(Lib3MF_Image3D pImage3D, Lib3MF_uint32 * pSizeX);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_getsizey(Lib3MF_Image3D pImage3D, Lib3MF_uint32 * pSizeY);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_getsheetcount(Lib3MF_Image3D pImage3D, Lib3MF_uint32 * pSheetCount);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_getsheet(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, Lib3MF_Attachment * pSheet);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_getsheetminvalue(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, Lib3MF_double * pMinVal);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_getsheetmaxvalue(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, Lib3MF_double * pMaxVal);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_createemptysheet(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, const char * pPath, Lib3MF_double dMin, Lib3MF_double dMax, Lib3MF_Attachment * pSheet);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_createsheetfrombuffer(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, const char * pPath, Lib3MF_uint64 nDataBufferSize, const Lib3MF_uint8 * pDataBuffer, Lib3MF_double dMin, Lib3MF_double dMax, Lib3MF_Attachment * pSheet);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_createsheetfromfile(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, const char * pPath, const char * pFileName, Lib3MF_double dMin, Lib3MF_double dMax, Lib3MF_Attachment * pSheet);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_setsheet(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, Lib3MF_Attachment pSheet);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_setsheetminvalue(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, Lib3MF_double dMinVal);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3d_setsheetmaxvalue(Lib3MF_Image3D pImage3D, Lib3MF_uint32 nIndex, Lib3MF_double dMaxVal);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_getimage(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, Lib3MF_Image3D * pImage3D);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_setimage(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, Lib3MF_Image3D pImage3D);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_setsourcechannel(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, const char * pChannelName);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_getsourcechannel(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, const Lib3MF_uint32 nChannelNameBufferSize, Lib3MF_uint32* pChannelNameNeededChars, char * pChannelNameBuffer);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_setdestinationchannel(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, const char * pChannelName);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_getdestinationchannel(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, const Lib3MF_uint32 nChannelNameBufferSize, Lib3MF_uint32* pChannelNameNeededChars, char * pChannelNameBuffer);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_setfilter(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, eLib3MFTextureFilter eFilter);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_getfilter(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, eLib3MFTextureFilter * pFilter);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_settilestyles(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, eLib3MFTextureTileStyle eTileStyleU, eLib3MFTextureTileStyle eTileStyleV, eLib3MFTextureTileStyle eTileStyleW);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_image3dchannelselector_gettilestyles(Lib3MF_Image3DChannelSelector pImage3DChannelSelector, eLib3MFTextureTileStyle * pTileStyleU, eLib3MFTextureTileStyle * pTileStyleV, eLib3MFTextureTileStyle * pTileStyleW);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_gettransform(Lib3MF_VolumetricLayer pVolumetricLayer, sLib3MFTransform * pTransform);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_settransform(Lib3MF_VolumetricLayer pVolumetricLayer, const sLib3MFTransform * pTransform);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_getblendmethod(Lib3MF_VolumetricLayer pVolumetricLayer, eLib3MFBlendMethod * pBlendMethod);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_setblendmethod(Lib3MF_VolumetricLayer pVolumetricLayer, eLib3MFBlendMethod eBlendMethod);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_getsourcealpha(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_double * pSourceAlpha);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_setsourcealpha(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_double dSourceAlpha);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_getdestinationalpha(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_double * pDestinationAlpha);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_setdestinationalpha(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_double dDestinationAlpha);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_getinformation(Lib3MF_VolumetricLayer pVolumetricLayer, sLib3MFTransform * pTransform, eLib3MFBlendMethod * pBlendMethod, Lib3MF_double * pSourceAlpha, Lib3MF_double * pDestinationAlpha);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_setinformation(Lib3MF_VolumetricLayer pVolumetricLayer, const sLib3MFTransform * pTransform, eLib3MFBlendMethod eBlendMethod, Lib3MF_double dSourceAlpha, Lib3MF_double dDestinationAlpha);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_createmaskchannelselector(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_Image3D pImage3D, const char * pSourceChannel, const char * pDestinationChannel, Lib3MF_Image3DChannelSelector * pChannelSelector);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_hasmaskchannelselector(Lib3MF_VolumetricLayer pVolumetricLayer, bool * pSelectorExists);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_clearmaskchannelselector(Lib3MF_VolumetricLayer pVolumetricLayer);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_getmaskchannelselector(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_Image3DChannelSelector * pChannelSelector);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_getchannelselectorcount(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_uint32 * pCount);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_getchannelselector(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_uint32 nIndex, Lib3MF_Image3DChannelSelector * pChannelSelector);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_addchannelselector(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_Image3D pImage3D, const char * pSourceChannel, const char * pDestinationChannel, Lib3MF_Image3DChannelSelector * pChannelSelector);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_clearchannelselectors(Lib3MF_VolumetricLayer pVolumetricLayer);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_reindexchannelselector(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_Image3DChannelSelector pChannelSelector, Lib3MF_uint32 nIndex);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_removechannelselector(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_Image3DChannelSelector pChannelSelector);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetriclayer_removechannelselectorbyindex(Lib3MF_VolumetricLayer pVolumetricLayer, Lib3MF_uint32 nIndex);
LIB3MF_DECLSPEC Lib3MFResult lib3mf_volumetricstack_clear(Lib3MF_VolumetricStack pVolumetricStack);