Autogenerated/Bindings/CSharp/Lib3MF.cs


			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_multipropertygroup_addlayer", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 MultiPropertyGroup_AddLayer (IntPtr Handle, InternalMultiPropertyLayer ATheLayer, out UInt32 ALayerIndex);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_multipropertygroup_getlayer", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 MultiPropertyGroup_GetLayer (IntPtr Handle, UInt32 ALayerIndex, out InternalMultiPropertyLayer ATheLayer);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_multipropertygroup_removelayer", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 MultiPropertyGroup_RemoveLayer (IntPtr Handle, UInt32 ALayerIndex);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_getsizex", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_GetSizeX (IntPtr Handle, out UInt32 ASizeX);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_getsizey", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_GetSizeY (IntPtr Handle, out UInt32 ASizeY);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_getsheetcount", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_GetSheetCount (IntPtr Handle, out UInt32 ASheetCount);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_getsheet", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_GetSheet (IntPtr Handle, UInt32 AIndex, out IntPtr ASheet);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_getsheetminvalue", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_GetSheetMinValue (IntPtr Handle, UInt32 AIndex, out Double AMinVal);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_getsheetmaxvalue", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_GetSheetMaxValue (IntPtr Handle, UInt32 AIndex, out Double AMaxVal);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_createemptysheet", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_CreateEmptySheet (IntPtr Handle, UInt32 AIndex, byte[] APath, Double AMin, Double AMax, out IntPtr ASheet);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_createsheetfrombuffer", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_CreateSheetFromBuffer (IntPtr Handle, UInt32 AIndex, byte[] APath, UInt64 sizeData, IntPtr dataData, Double AMin, Double AMax, out IntPtr ASheet);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_createsheetfromfile", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_CreateSheetFromFile (IntPtr Handle, UInt32 AIndex, byte[] APath, byte[] AFileName, Double AMin, Double AMax, out IntPtr ASheet);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_setsheet", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_SetSheet (IntPtr Handle, UInt32 AIndex, IntPtr ASheet);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_setsheetminvalue", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_SetSheetMinValue (IntPtr Handle, UInt32 AIndex, Double AMinVal);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3d_setsheetmaxvalue", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3D_SetSheetMaxValue (IntPtr Handle, UInt32 AIndex, Double AMaxVal);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_getimage", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_GetImage (IntPtr Handle, out IntPtr AImage3D);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_setimage", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_SetImage (IntPtr Handle, IntPtr AImage3D);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_setsourcechannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_SetSourceChannel (IntPtr Handle, byte[] AChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_getsourcechannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_GetSourceChannel (IntPtr Handle, UInt32 sizeChannelName, out UInt32 neededChannelName, IntPtr dataChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_setdestinationchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_SetDestinationChannel (IntPtr Handle, byte[] AChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_getdestinationchannel", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_GetDestinationChannel (IntPtr Handle, UInt32 sizeChannelName, out UInt32 neededChannelName, IntPtr dataChannelName);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_setfilter", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_SetFilter (IntPtr Handle, Int32 AFilter);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_getfilter", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_GetFilter (IntPtr Handle, out Int32 AFilter);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_settilestyles", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_SetTileStyles (IntPtr Handle, Int32 ATileStyleU, Int32 ATileStyleV, Int32 ATileStyleW);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_image3dchannelselector_gettilestyles", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 Image3DChannelSelector_GetTileStyles (IntPtr Handle, out Int32 ATileStyleU, out Int32 ATileStyleV, out Int32 ATileStyleW);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_gettransform", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetTransform (IntPtr Handle, out InternalTransform ATransform);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_settransform", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_SetTransform (IntPtr Handle, InternalTransform ATransform);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_getblendmethod", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetBlendMethod (IntPtr Handle, out Int32 ABlendMethod);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_setblendmethod", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_SetBlendMethod (IntPtr Handle, Int32 ABlendMethod);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_getsourcealpha", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetSourceAlpha (IntPtr Handle, out Double ASourceAlpha);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_setsourcealpha", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_SetSourceAlpha (IntPtr Handle, Double ASourceAlpha);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_getdestinationalpha", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetDestinationAlpha (IntPtr Handle, out Double ADestinationAlpha);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_setdestinationalpha", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_SetDestinationAlpha (IntPtr Handle, Double ADestinationAlpha);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_getinformation", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetInformation (IntPtr Handle, out InternalTransform ATransform, out Int32 ABlendMethod, out Double ASourceAlpha, out Double ADestinationAlpha);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_setinformation", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_SetInformation (IntPtr Handle, InternalTransform ATransform, Int32 ABlendMethod, Double ASourceAlpha, Double ADestinationAlpha);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_createmaskchannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_CreateMaskChannelSelector (IntPtr Handle, IntPtr AImage3D, byte[] ASourceChannel, byte[] ADestinationChannel, out IntPtr AChannelSelector);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_hasmaskchannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_HasMaskChannelSelector (IntPtr Handle, out Byte ASelectorExists);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_clearmaskchannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_ClearMaskChannelSelector (IntPtr Handle);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_getmaskchannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetMaskChannelSelector (IntPtr Handle, out IntPtr AChannelSelector);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_getchannelselectorcount", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetChannelSelectorCount (IntPtr Handle, out UInt32 ACount);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_getchannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_GetChannelSelector (IntPtr Handle, UInt32 AIndex, out IntPtr AChannelSelector);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_addchannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_AddChannelSelector (IntPtr Handle, IntPtr AImage3D, byte[] ASourceChannel, byte[] ADestinationChannel, out IntPtr AChannelSelector);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_clearchannelselectors", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_ClearChannelSelectors (IntPtr Handle);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_reindexchannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_ReindexChannelSelector (IntPtr Handle, IntPtr AChannelSelector, UInt32 AIndex);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_removechannelselector", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_RemoveChannelSelector (IntPtr Handle, IntPtr AChannelSelector);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetriclayer_removechannelselectorbyindex", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricLayer_RemoveChannelSelectorByIndex (IntPtr Handle, UInt32 AIndex);

			[DllImport("lib3mf.dll", EntryPoint = "lib3mf_volumetricstack_clear", CallingConvention=CallingConvention.Cdecl)]
			public unsafe extern static Int32 VolumetricStack_Clear (IntPtr Handle);
